[package]
name = "onchain_agent"
version = "0.1.0"
edition = "2024"

[dependencies]
frankenstein = "0.32.1"
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
genai = "=0.1.7"
dotenv-flow = "0.16.2"
reqwest = "0.12.16"
regex = "1.11.1"
serde_json = "1.0.140"
